--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,7 @@
       <version>5.1.6</version>
     </dependency>
 
+    <!--缓存-->
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
@@ -120,6 +121,7 @@
     </dependency>
 
 
+    <!--工具类 使用org.apache.commons.lang3.StringUtils-->
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
