完成了前台的所有的用户模块，以及添加产品分类和修改分类名的功能

--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,4 +1,4 @@
-db.driverLocation=/Users/ynwu/Documents/package/mysql/mysql-connector-java/5.1.6/mysql-connector-java-5.1.6.jar
+#db.driverLocation=/Users/ynwu/Documents/package/mysql/mysql-connector-java/5.1.6/mysql-connector-java-5.1.6.jar
 db.driverClassName=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://10.211.55.3:3306/mmall?characterEncoding=utf-8
 db.username=mmall
