完成了商品管理模块的新增更新商品，上下架，获取详情，获取列表和搜索功能

--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -3,7 +3,7 @@ ftp.server.ip=10.211.55.3
 #ftp.user=mmallftp
 ftp.user=ftpuser
 ftp.pass=123456
-ftp.server.http.prefix=http://img.happymmall.com/
+ftp.server.http.prefix=http://img.wyn.com/
 
 
 #alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
